{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 70,
  "lineage": "d9d05593-1d12-c85d-7eab-c7e0509359e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:610630032035:instance/i-0c013869644468ebc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c013869644468ebc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09eb3edc34236e919",
            "private_dns": "ip-10-0-1-220.ec2.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-52-207-219-224.compute-1.amazonaws.com",
            "public_ip": "52.207.219.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05987bee37e4964e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094f8a6bd1e1d2867",
            "tags": {
              "Name": "task_server_0"
            },
            "tags_all": {
              "Name": "task_server_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0780408c88059e1a9"
            ]
          },
          "dependencies": [
            "aws_security_group.Ec2SG",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:610630032035:instance/i-001a97f20096da79f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001a97f20096da79f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03df0dc27b6cb61f9",
            "private_dns": "ip-10-0-2-215.ec2.internal",
            "private_ip": "10.0.2.215",
            "public_dns": "ec2-54-235-50-127.compute-1.amazonaws.com",
            "public_ip": "54.235.50.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014738dda91b0d977",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090808806a900ed1c",
            "tags": {
              "Name": "task_server_1"
            },
            "tags_all": {
              "Name": "task_server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0780408c88059e1a9"
            ]
          },
          "dependencies": [
            "aws_security_group.Ec2SG",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:internet-gateway/igw-008f6d18b36de4024",
            "id": "igw-008f6d18b36de4024",
            "owner_id": "610630032035",
            "tags": {
              "Name": "task_igw"
            },
            "tags_all": {
              "Name": "task_igw"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "task_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:loadbalancer/app/task-alb/91aad5c037aa240a",
            "arn_suffix": "app/task-alb/91aad5c037aa240a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-alb-720658484.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:610630032035:loadbalancer/app/task-alb/91aad5c037aa240a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-alb",
            "security_groups": [
              "sg-0252b3c3c3f72c0ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090808806a900ed1c"
              },
              {
                "subnet_id": "subnet-094f8a6bd1e1d2867"
              }
            ],
            "subnets": [
              "subnet-090808806a900ed1c",
              "subnet-094f8a6bd1e1d2867"
            ],
            "tags": {
              "Name": "task_alb"
            },
            "tags_all": {
              "Name": "task_alb"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ElbSG",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "task_alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:listener/app/task-alb/91aad5c037aa240a/8a8dc2bc9594c326",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610630032035:listener/app/task-alb/91aad5c037aa240a/8a8dc2bc9594c326",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:loadbalancer/app/task-alb/91aad5c037aa240a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.task_alb",
            "aws_lb_target_group.task_tg",
            "aws_security_group.ElbSG",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d",
            "arn_suffix": "targetgroup/task-tg/bbb3041673a12f4d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "task-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "task_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d-20220109071401411800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d",
            "target_id": "i-0c013869644468ebc"
          },
          "dependencies": [
            "aws_instance.task_server",
            "aws_lb_target_group.task_tg",
            "aws_security_group.Ec2SG",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d-20220109071402380000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:610630032035:targetgroup/task-tg/bbb3041673a12f4d",
            "target_id": "i-001a97f20096da79f"
          },
          "dependencies": [
            "aws_instance.task_server",
            "aws_lb_target_group.task_tg",
            "aws_security_group.Ec2SG",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:route-table/rtb-0ef515b78414ad683",
            "id": "rtb-0ef515b78414ad683",
            "owner_id": "610630032035",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "task_private_table"
            },
            "tags_all": {
              "Name": "task_private_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:route-table/rtb-0bdab42d14f9353eb",
            "id": "rtb-0bdab42d14f9353eb",
            "owner_id": "610630032035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008f6d18b36de4024",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task_public_table"
            },
            "tags_all": {
              "Name": "task_public_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task_gw",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205fce303c00fd24",
            "route_table_id": "rtb-0ef515b78414ad683",
            "subnet_id": "subnet-047a16a0b5473e9f9"
          },
          "dependencies": [
            "aws_route_table.task_rt_private",
            "aws_subnet.private_subnet",
            "aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae70a0c09b7b47b",
            "route_table_id": "rtb-0ef515b78414ad683",
            "subnet_id": "subnet-0b03e40b5ed79df7f"
          },
          "dependencies": [
            "aws_route_table.task_rt_private",
            "aws_subnet.private_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a134405a7757217",
            "route_table_id": "rtb-0bdab42d14f9353eb",
            "subnet_id": "subnet-094f8a6bd1e1d2867"
          },
          "dependencies": [
            "aws_vpc.task_vpc",
            "aws_internet_gateway.task_gw",
            "aws_route_table.task_rt_public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae01431d9affeba",
            "route_table_id": "rtb-0bdab42d14f9353eb",
            "subnet_id": "subnet-090808806a900ed1c"
          },
          "dependencies": [
            "aws_internet_gateway.task_gw",
            "aws_route_table.task_rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ec2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:security-group/sg-0780408c88059e1a9",
            "description": "allows elb to come in",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0780408c88059e1a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from elb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "117.221.226.29/32"
                ],
                "description": "ssh from myip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http from elb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0252b3c3c3f72c0ad"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_elb",
            "name_prefix": "",
            "owner_id": "610630032035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_elb"
            },
            "tags_all": {
              "Name": "allow_elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ElbSG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ElbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:security-group/sg-0252b3c3c3f72c0ad",
            "description": "allows elb to http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0252b3c3c3f72c0ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "610630032035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdsSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:security-group/sg-0cf63f38d1cd0d2f6",
            "description": "allows ec2 to rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf63f38d1cd0d2f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "117.221.226.29/32"
                ],
                "description": "ssh from myip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ec2 to rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0780408c88059e1a9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rds",
            "name_prefix": "",
            "owner_id": "610630032035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Ec2SG",
            "aws_security_group.ElbSG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:subnet/subnet-047a16a0b5473e9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-047a16a0b5473e9f9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610630032035",
            "tags": {
              "Name": "task_private_subnet_0"
            },
            "tags_all": {
              "Name": "task_private_subnet_0"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:subnet/subnet-0b03e40b5ed79df7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0b03e40b5ed79df7f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610630032035",
            "tags": {
              "Name": "task_private_subnet_1"
            },
            "tags_all": {
              "Name": "task_private_subnet_1"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:subnet/subnet-094f8a6bd1e1d2867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-094f8a6bd1e1d2867",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610630032035",
            "tags": {
              "Name": "task_public_subnet_0"
            },
            "tags_all": {
              "Name": "task_public_subnet_0"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:subnet/subnet-090808806a900ed1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-090808806a900ed1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610630032035",
            "tags": {
              "Name": "task_public_subnet_1"
            },
            "tags_all": {
              "Name": "task_public_subnet_1"
            },
            "vpc_id": "vpc-01bbb3783c7e0c742"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610630032035:vpc/vpc-01bbb3783c7e0c742",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ef97825a13ba47e",
            "default_route_table_id": "rtb-0d79425e754c1216e",
            "default_security_group_id": "sg-088effc7994e29188",
            "dhcp_options_id": "dopt-0e7a33f3b7e926d14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01bbb3783c7e0c742",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d79425e754c1216e",
            "owner_id": "610630032035",
            "tags": {
              "Environment": "training",
              "Name": "task_vpc"
            },
            "tags_all": {
              "Environment": "training",
              "Name": "task_vpc"
            }
          }
        }
      ]
    }
  ]
}